css/faq.css
.faq-header{
	height: 250px
}
.faq-header-text{
	padding: 20px;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}
.faq-header-img{
	margin-top:25px;
}
.faq-content{
	margin-top:30px;
	padding-bottom:30px;
}
.faq-sections{
	background-color:#ddd;
	height:45px;
	padding:10px;
}
.faq-body{
	padding-top: 15px;
	background-color: #eee;
}
.media-body{
	margin-top:30px;
}
.forum-p{
	margin:0;
}
.topic-holder a{
	padding-left: 15px;
	color: #8dc63f;
}

@media(max-width: 768px){
	.faq-col{
		padding-left: 40px !important;
	}
}

